fixes spacing of side nav items

--- a/src/components/map-components/Map.scss
+++ b/src/components/map-components/Map.scss
@@ -56,6 +56,7 @@
         display:flex;
         flex-direction:column;
         justify-content:flex-start;
+        align-items: flex-start;
         color:white;
         padding:0;
         width: 20%;
@@ -216,8 +217,9 @@
             color:white;
             text-decoration:none;
             padding:10px 0px;
-            margin: 10px 0px;
-            text-align:left;
+            margin: 5px 0px;
+            margin-left:30px;
+            justify-content:flex-start;
             width:100%;
         }
 
@@ -270,7 +272,6 @@
     .data-by-category {
         width: 80%;
 
-
         @media only screen and (max-width: 600px) {
             position: absolute;
             display: flex;
@@ -281,24 +282,20 @@
         }
         
         @media only screen and (max-width: 600px) {
-            width:100%;
-            
+            width:100%;           
         }
 
 
         h1{
             text-align:center;
-        }
-
-        
+        }    
     
         .charts {
             display: flex;
             flex-wrap:wrap;
             margin: 10px;
             @media only screen and (max-width: 600px) {
-                padding: 0 5px;
-                
+                padding: 0 5px;               
                 width: 100%;
             }   
         }
